# looks-mapping-project

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  LooksMapping.html  Makefile  README.md  basic_scraper.py  comprehensive_map_scraper.py  extract_data.py  looksmapping_complete.html  looksmapping_source.html  map_scraper.py  neighborhood_analyzer.py  pin_scraper.py  pip install  playwright_scraper.py  pyproject.toml  rankings_data.json  raw_looksmapping.html  requests_html_scraper.py  requirements-dev.txt  requirements.txt  restaurant_data.json  scraper.py  selenium_scraper.py  selenium_scraper_robust.py  simple_scraper.py
.github/workflows/: ci.yml
docs/: api.md  examples.md
scripts/: __init__.py  analyze.py  scrape.py
src/: __init__.py
src/analyzers/: __init__.py  neighborhood_analyzer.py
src/models/: __init__.py  restaurant.py
src/scrapers/: __init__.py  base.py  http_scraper.py  playwright_scraper.py  selenium_scraper.py
src/utils/: __init__.py  config.py  helpers.py
tests/: __init__.py
tests/test_analyzers/: __init__.py  test_neighborhood_analyzer.py
tests/test_scrapers/: test_http_scraper.py  test_selenium_scraper.py
tests/test_utils/: test_helpers.py
